<resources>
    <string name="app_name">p4.1</string>
    <string name="action_settings">Settings</string>
    <string name="contact">Contact</string>
    <string name="order">Order</string>
    <string name="status">Status</string>
    <string name="favorites">Favorites</string>
    <string name="action_order_message">You seleted Order.</string>
    <string name="action_status_message">You selected Status</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You seleted Contact.</string>


    <string name="text_droid">Droid Desserts</string>
    <string name="donet_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>

    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>

    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>

    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>

    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter your Phone Number</string>

    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter your Note</string>


    <string name="delivery_label_text">Choose a delivery method: </string>

    <string name="sameday_text">Same day messenger service</string>
    <string name="nextday_text">Next day ground delivery</string>
    <string name="pickup_text">Pick up</string>



    <string-array name="labels_array">
        <item>Home</item>
        <item>Word</item>
        <item>Mobile</item>
        <item>Other</item>
        <item>O.o</item>
    </string-array>
</resources>