<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!--    <item-->
    <!--        android:id="@+id/action_settings"-->
    <!--        android:orderInCategory="100"-->
    <!--        android:title="@string/action_settings"-->
    <!--        app:showAsAction="never"/>-->

    <item
        android:id="@+id/action_contact"
        android:orderInCategory="100"
        android:title="@string/contact"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_order"
        android:orderInCategory="10"
        android:icon="@drawable/ic_shopping_cart"
        android:title="@string/order"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_status"
        android:orderInCategory="20"
        android:icon="@drawable/ic_status"
        android:title="@string/status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorite"
        android:orderInCategory="30"
        app:showAsAction="ifRoom" />
</menu>